[package]
name = "polly-tts-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive", "env"] }
aws-sdk-polly = "0.19.0"
aws-config = "0.49.0"
tokio = { version = "1.21.2", features = ["full"] }
